Add module-info, remove unnecessary dependencies